--- a/style.css
+++ b/style.css
@@ -34,6 +34,9 @@ main{
 }
 
 .step-number{
+	width: 15%;
+	font-size: 90%;
+	text-align: center;
 	background-color: orange;
 	color: white;
 	padding: 3px;
